K8S/logging-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logging-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: logging-service
  template:
    metadata:
      labels:
        app: logging-service
    spec:
      containers:
        - name: logging-service
          image: niki241618/logging-service
---
apiVersion: v1
kind: Service
metadata:
  name: logging-service-nodeport
spec:
  type: NodePort
  selector:
    app: logging-service
  ports:
    - port: 80
      targetPort: 80
