K8S/streaming-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaming-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: streaming-service
  template:
    metadata:
      labels:
        app: streaming-service
    spec:
      containers:
        - name: book-streaming-service
          image: niki241618/book-streaming-service
---
apiVersion: v1
kind: Service
metadata:
  name: streaming-service-nodeport
spec:
  type: NodePort
  selector:
    app: streaming-service
  ports:
    - port: 80
      targetPort: 80
