K8S/usersService-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: users-service
  template:
    metadata:
      labels:
        app: users-service
    spec:
      containers:
        - name: users-service
          image: niki241618/users-service
          resources:
            requests: #Claimed resources
              memory: "256Mi"
              cpu: "250m" #1/4 of the core
            limits:   #Maximum resources
              memory: "512Mi"
              cpu: "500m" #1/2 of the core
---
apiVersion: v1
kind: Service
metadata:
  name: users-service-nodeport
spec:
  type: NodePort
  selector:
    app: users-service
  ports:
    - port: 80
      targetPort: 80
#Auto-Scaling
